```toml
[tool.poetry]
name = "ai-articles-writer"
version = "0.1.0"
description = "AI Agent for writing articles"
authors = ["Ebrahim Saad <ebrahimsaad2017@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"

requests = ">=2.32.3"
rich = ">=13.9.4"
python-dotenv = ">=1.0.1"
pydantic = ">=2.10.6"
json-repair = ">=0.29.1"

# LangChain and related packages
langchain = ">=0.3.20"
langchain_core = ">=0.3.45"
langchain_community = ">=0.3.19"
langchain_openai = ">=0.3.8"
langchain_together = ">=0.3.0"
langgraph = ">=0.3.18"

[tool.poetry.scripts]
aiarticleswriter = "articles_writer.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"